Add student absence updates
