# server/internal/api/server.go
@@ -80,4 +80,6 @@ type ClassService interface {
 	CreateLesson(context.Context, string, uuid.UUID, domain.CreateLessonInput) (domain.LessonView, error)
 	CreateGradeItem(context.Context, string, uuid.UUID, string, string, string, *float64) (entity.GradeItem, error)
 	PutStudentScore(context.Context, string, uuid.UUID, uuid.UUID, *float64, *string, *string) (entity.Score, error)
+	PutStudentAbsence(context.Context, string, uuid.UUID, uuid.UUID) (entity.Absence, error)
+	DeleteStudentAbsence(context.Context, string, uuid.UUID, uuid.UUID) error
 }
